--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,37 +1,55 @@
-.absolute {
-  position: absolute
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem
 }
 
-.relative {
-  position: relative
-}
-
-.mb-8 {
+.my-8 {
+  margin-top: 2rem;
   margin-bottom: 2rem
-}
-
-.mr-2 {
-  margin-right: 0.5rem
-}
-
-.mr-1 {
-  margin-right: 0.25rem
 }
 
 .mb-12 {
   margin-bottom: 3rem
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem
-}
-
-.mb-0 {
-  margin-bottom: 0px
+.mb-8 {
+  margin-bottom: 2rem
 }
 
 .mt-12 {
   margin-top: 3rem
+}
+
+.mr-8 {
+  margin-right: 2rem
+}
+
+.ml-8 {
+  margin-left: 2rem
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem
+}
+
+.mb-4 {
+  margin-bottom: 1rem
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem
+}
+
+.ml-12 {
+  margin-left: 3rem
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem
+}
+
+.inline {
+  display: inline
 }
 
 .flex {
@@ -42,16 +60,28 @@
   display: grid
 }
 
-.h-12 {
-  height: 3rem
-}
-
-.h-2 {
-  height: 0.5rem
-}
-
 .h-24 {
   height: 6rem
+}
+
+.h-5 {
+  height: 1.25rem
+}
+
+.h-96 {
+  height: 24rem
+}
+
+.h-72 {
+  height: 18rem
+}
+
+.h-80 {
+  height: 20rem
+}
+
+.h-64 {
+  height: 16rem
 }
 
 .w-24 {
@@ -62,20 +92,58 @@
   width: 100%
 }
 
-.w-32 {
-  width: 8rem
+.w-5 {
+  width: 1.25rem
 }
 
 .w-96 {
   width: 24rem
 }
 
-.w-72 {
-  width: 18rem
-}
-
 .w-64 {
   width: 16rem
+}
+
+.w-12 {
+  width: 3rem
+}
+
+.w-32 {
+  width: 8rem
+}
+
+.w-48 {
+  width: 12rem
+}
+
+.w-56 {
+  width: 14rem
+}
+
+.w-2 {
+  width: 0.5rem
+}
+
+.w-4 {
+  width: 1rem
+}
+
+.w-8 {
+  width: 2rem
+}
+
+.w-10 {
+  width: 2.5rem
+}
+
+.w-60 {
+  width: 15rem
+}
+
+.min-w-max {
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content
 }
 
 .max-w-xs {
@@ -86,16 +154,28 @@
   max-width: 24rem
 }
 
-.max-w-md {
-  max-width: 28rem
+.max-w-xl {
+  max-width: 36rem
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+.max-w-2xl {
+  max-width: 42rem
+}
+
+.max-w-3xl {
+  max-width: 48rem
 }
 
 .list-none {
   list-style-type: none
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr))
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr))
 }
 
 .flex-col {
@@ -106,8 +186,60 @@
   place-items: center
 }
 
+.items-center {
+  align-items: center
+}
+
 .justify-between {
   justify-content: space-between
+}
+
+.gap-2 {
+  gap: 0.5rem
+}
+
+.gap-4 {
+  gap: 1rem
+}
+
+.gap-8 {
+  gap: 2rem
+}
+
+.gap-12 {
+  gap: 3rem
+}
+
+.gap-6 {
+  gap: 1.5rem
+}
+
+.gap-5 {
+  gap: 1.25rem
+}
+
+.gap-x-0 {
+  -moz-column-gap: 0px;
+       column-gap: 0px
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem
+}
+
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem
+}
+
+.gap-y-4 {
+  row-gap: 1rem
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -116,14 +248,22 @@
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)))
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity))
+.rounded-full {
+  border-radius: 9999px
 }
 
-.bg-blue-50 {
+.border {
+  border-width: 1px
+}
+
+.bg-lime-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity))
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity))
+}
+
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity))
 }
 
 .bg-blue-600 {
@@ -131,9 +271,79 @@
   background-color: rgb(37 99 235 / var(--tw-bg-opacity))
 }
 
-.bg-blue-700 {
+.bg-yellow-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity))
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity))
+}
+
+.bg-pink-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity))
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity))
+}
+
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity))
+}
+
+.bg-sky-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity))
+}
+
+.bg-purple-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 132 252 / var(--tw-bg-opacity))
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity))
+}
+
+.bg-orange-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity))
+}
+
+.bg-teal-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 234 212 / var(--tw-bg-opacity))
+}
+
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity))
+}
+
+.bg-fuchsia-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 70 239 / var(--tw-bg-opacity))
+}
+
+.bg-pink-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity))
+}
+
+.bg-amber-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 211 77 / var(--tw-bg-opacity))
+}
+
+.bg-cyan-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 116 144 / var(--tw-bg-opacity))
+}
+
+.bg-cyan-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity))
 }
 
 .p-0 {
@@ -144,37 +354,54 @@
   padding: 0.5rem
 }
 
+.pt-10 {
+  padding-top: 2.5rem
+}
+
+.pt-2 {
+  padding-top: 0.5rem
+}
+
+.text-center {
+  text-align: center
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem
 }
 
 .font-bold {
   font-weight: 700
 }
 
-.text-yellow-300 {
-  --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity))
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity))
-}
-
-.text-yellow-200 {
-  --tw-text-opacity: 1;
-  color: rgb(254 240 138 / var(--tw-text-opacity))
-}
-
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity))
-}
-
-.outline {
-  outline-style: solid
+.font-medium {
+  font-weight: 500
 }
 
 .filter {
@@ -189,5 +416,24 @@
 @media (min-width: 640px) {
   .sm\:w-80 {
     width: 20rem
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:grid {
+    display: grid
+  }
+
+  .lg\:w-full {
+    width: 100%
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr))
+  }
+
+  .lg\:gap-x-4 {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem
   }
 }
